--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,9 +11,11 @@
         android:id="@+id/viewFinder"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_marginBottom="32dp"
+        android:layout_marginTop="80dp"
+        android:layout_marginBottom="64dp"
+        app:layout_constraintBottom_toTopOf="@+id/capture_button"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@+id/capture_button" />
+        app:layout_constraintVertical_bias="1.0" />
 
     <ImageButton
         android:id="@+id/capture_button"
@@ -21,7 +23,7 @@
         android:layout_height="60dp"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="32dp"
+        android:layout_marginBottom="64dp"
         android:background="?attr/selectableItemBackground"
         android:scaleType="centerCrop"
         android:src="@drawable/baseline_camera_alt_24"
@@ -31,16 +33,15 @@
         app:tint="@color/white" />
 
 
-
     <ProgressBar
         android:id="@+id/progress_bar"
         android:layout_width="100dp"
         android:layout_height="100dp"
+        android:progressTint="@color/hijau_muda_2"
         android:visibility="gone"
-        android:progressTint="@color/white"
-        app:layout_constraintTop_toTopOf="@id/viewFinder"
-        app:layout_constraintBottom_toBottomOf="@id/viewFinder"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
